RESOLVED FIXED284949
ARMv7: fix struct-new_default-small-members.js
https://bugs.webkit.org/show_bug.cgi?id=284949
Summary ARMv7: fix struct-new_default-small-members.js
Angelos Oikonomopoulos
Reported 2024-12-19 04:54:26 PST
In storing a 64-bit constant to a 32-bit location, it tries to use the hi GPR which is not set. This immediately hits an assertion in a Debug build.
Attachments
Angelos Oikonomopoulos
Comment 1 2024-12-19 04:56:17 PST
EWS
Comment 2 2024-12-20 00:29:34 PST
Committed 288154@main (b650f1b5d07e): <https://commits.webkit.org/288154@main> Reviewed commits have been landed. Closing PR #38204 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-12-20 00:30:23 PST
Note You need to log in before you can comment on or make changes to this bug.