ARMv7: fix struct-new_default-small-members.js https://bugs.webkit.org/show_bug.cgi?id=284949

Reviewed by Justin Michaud.

Don't try to store a 64-bit value in a 32-bit location, this immediately
triggers an assertion on a Debug build (but fails non-deterministically
on a Release build).

* JSTests/wasm/stress/struct-new_default-small-members.js:
* Source/JavaScriptCore/wasm/WasmBBQJIT32_64.cpp:
(JSC::Wasm::BBQJITImpl::BBQJIT::emitStructPayloadSet):

Canonical link: https://commits.webkit.org/288154@main